--- a/ansible_playbooks/inject_dataspectsSystemCoreOntology_into_mediawiki.yml
+++ b/ansible_playbooks/inject_dataspectsSystemCoreOntology_into_mediawiki.yml
@@ -4,7 +4,7 @@
   gather_facts: False
   tasks:
 
-    - name: Clone dataspectsSystemCoreOntology, dataspects_lib, dataspects_api
+    - name: Clone dataspectsSystemCoreOntology, dataspectsSystemCookbookOntology
       git:
         repo: "https://github.com/dataspects/{{ item }}.git"
         dest: "{{ dataspectsSystem_path_on_host }}/workspace/{{ item }}"
@@ -12,7 +12,7 @@
         - dataspectsSystemCoreOntology
         - dataspectsSystemCookbookOntology
       tags:
-        - inject_dataspectsSystemCoreOntology
+        - inject_dataspectsSystemCoreAndCookbookOntology
 
     - name: inject_dataspectsSystemCoreOntology_into_mediawiki.rb
       template:
@@ -23,13 +23,13 @@
         - inject_dataspectsSystemCoreOntology_into_mediawiki.rb
         - inject_dataspectsSystemCookbookOntology_into_mediawiki.rb
       tags:
-        - inject_dataspectsSystemCoreOntology
+        - inject_dataspectsSystemCoreAndCookbookOntology
 
     # [[IsOperationType::RunDockerContainer]]
     - name: Inject dataspectsSystemCoreOntology into mediawiki
       shell: docker run \
-              --volume {{ dataspectsSystem_path_on_host }}/workspace/:/usr/src/workspace \
-              --workdir /usr/src/workspace/dataspects_lib \
+              --volume {{ dataspectsSystem_path_on_host }}:/usr/src \
+              --workdir /usr/src/dataspects_lib \
               --network dataspectsstandardsystem_default \
               --rm \
                 dataspects/dataspects:{{ dataspects_version }} \
@@ -41,4 +41,4 @@
         - inject_dataspectsSystemCoreOntology_into_mediawiki.rb
         - inject_dataspectsSystemCookbookOntology_into_mediawiki.rb
       tags:
-        - inject_dataspectsSystemCoreOntology
+        - inject_dataspectsSystemCoreAndCookbookOntology
