--- a/config/standard_system_profiles.yml
+++ b/config/standard_system_profiles.yml
@@ -6,5 +6,6 @@ dataspectsStandardSystemSemanticMediaWiki:
   mw_http_script_path_url: "http://web/w"
   mw_user_name: Admin
   mw_user_password: adminpass
+  mw_must_log_in: true
 dataspectsSystemTIKAServer:
   tika_server_url: 'http://tika:9998'
