Added UID, changed dsstandard mw url

--- a/config/standard_system_profiles.yml
+++ b/config/standard_system_profiles.yml
@@ -2,7 +2,7 @@
 dataspectsSystemESCluster:
   elasticsearch_cluster_url: "http://elasticsearch:9200"
 dataspectsStandardSystemSemanticMediaWiki:
-  mw_http_script_path_url: "http://web/w"
+  mw_http_script_path_url: "http://mediawiki/w"
   mw_user_name: Admin
   mw_user_password: adminpass
   mw_must_log_in: true
